# sibdev-test-task

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  env_sample  pyproject.toml
.github/workflows/: ci.yaml
src/: manage.py
src/apps/deals/: conftest.py  models.py  utils.py
src/apps/deals/api/: serializers.py  urls.py  views.py
src/apps/deals/api/tests/: test_deals_uploading.py  test_get_deals.py
src/apps/deals/migrations/: 0001_initial.py
src/sibdev/: asgi.py  settings.py  settings_test.py  spectacular_settings.py  urls.py  wsgi.py
src/test_files/: deals.csv  deals_second.csv  invalid_data.csv
